tests/compiler/good/t88.zls
(* Reset of a pair of continuous variables defined in context *)

let hybrid f z = () where
  rec der x = 1.0 init 0.0 reset xyr(v, _) -> v
  and der y = 2.0 init 0.0 reset xyr(_, v) -> v
  and automaton
      | S0 ->
          do
          until z
            then do emit xyr = (last x, last y) in S0
      end

